# flagbit

./: .coverage  .coveragerc  .gitignore  404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yaml
about/: index.html
docs/: about.md  index.md  install_and_setup.md
install_and_setup/: index.html
search/: search_index.json
src/: exceptions.py  flag.py  helpers.py
src/api/: app.py  dependencies.py  flags_router.py  models.py  routers.py
src/api/static/: app.js  style.css
src/api/templates/: home.html
src/cli/: fake_data.py
src/clients/: mongo_db_client.py
src/domain/: flag.py
src/repo/: base.py  doc_store.py  fake_repo.py
src/services/: flagbit.py  flagship.py  flagship_srv.py
tests/: conftest.py  test_api.py  test_doc_store.py  test_flag.py  test_flagbit_srv.py  test_flagship_srv.py  test_helpers.py
tutorial/: index.html
