[project]
name = "flagship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hypothesis>=6.138.14",
    "isort>=6.0.1",
    "mutmut>=3.3.1",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "ruff>=0.12.12",
]


[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true